--- a/pages/reports_bimestrais/reports_bimestrais.css
+++ b/pages/reports_bimestrais/reports_bimestrais.css
@@ -26,47 +26,179 @@ button:hover{
 .text-range input{
     flex: 1;
 }
-
 .title{
-    font-size: 35px;
+    font-size: 20px;
     color: white;
 }
 
+.titleGrafico1{
+    margin-top: 10px;
+    font-size: 17px;
+    color: white;
+}
+.titleGrafico{
+    margin-top: 100px;
+    font-size: 17px;
+    color: white;
+}
 .center{
     margin-left: 5%;
     width: 90%;
     text-align: center;
 }
+.artigoL{
+    background: rgba(128, 128, 128, 0.2);
+    width: 40%;
+    margin-top: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
+    min-width: 300px;
+}
 
-.bimestre{
-    border: solid 2px white;
-    border-radius: 10px;
+.artigoC{
+    background: rgba(128, 128, 128, 0.2);
+    width: 90%;
     margin-top: 40px;
-    margin: 5%;
-    width: 15vw;
+    margin-left:5%;
+    margin-right: 5%;
 }
-.bimestre1{
-    margin:15px 0px 0px 0px;
+
+.tabelaInterna{
+    width: 98%;
+    margin-left: 1%;
+    margin-top: 2px;
+    background: rgb(255, 255, 255, 0);
+    border: solid white 1px;
+}
+
+.coluna{
+    text-align: center;
+    border-bottom: solid white 1px;
+    border-right: solid white 1px;
+    width: 33%;
+    height: 40px;
+}
+.paragrafo{
+    color: white;
+    font-size: 14px;
+    text-align: center;
+    margin: 5px;
+}
+
+.paragrafoP{
+    color: white;
+    font-size: 24px;
+    margin: 5% 5% 2.5% 5%;
+    text-align: justify;
+}
+
+.WhiteLine{
+    width: 95%;
+    margin: 2.5% 5% 0 2.5%;
     background: white;
+    height: 5px;
 }
 
-ol{
-    padding: 0;
-    list-style-type: none;
+.FundoGrafico{
+    border: 2px solid white;
+    height: 250px;
 }
 
-ol li {
-    cursor: pointer;
-    background: white;
-    padding: 8px 16px;
-    margin: 2px;
-    border-bottom: 1px solid black;
+.gf, .gfB, .gfA{
+    margin-block-start: auto;
+    color: white;
+    width: 14%;
+    height: 2%;
+    margin-left: 2.3%;
+}.gf{background: rgb(255, 81, 78);}.gfB{background: rgb(0, 155, 39);}.gfA{background: rgb(0, 3, 155);}
+.cgfl{
+    margin-block-start: auto;
+    background: rgba(0, 179, 255, 0.638);
+    color: white;
+    width: 7%;
+    height: 2%;
+    margin-left: 2.3%;
+}
+.cgfr{
+    margin-block-start: auto;
+    background: rgb(83, 83, 83);
+    color: white;
+    width: 7%;
+    height: 2%;
+    margin-left: 0%;
 }
 
-ol li:hover{
-    opacity: 0.8;
+.generator{
+    margin-top: 15%;
 }
 
-p{
-    margin: 4px 0;
+.barraHorizontal{
+    display: flex;
+    text-align: left;
+    height: 30px;
+    margin: 5px;
+}
+
+.barraH_Compromiss{
+    background: rgba(0, 179, 255, 0.638);
+    color:white;
+    height: 30px;
+    width: 90%;
+    margin-left: 5%;
+}
+
+.barraH_Capacit{
+    background: rgb(83, 83, 83);
+    color:white;
+    height: 30px;
+    width: 90%;
+    margin-left: 5%;
+}
+
+.fixed{
+    color: white;
+    position: absolute;
+    margin-left: 5px;
+    margin-top: 5px;
+}
+
+.barraHorizontalFrontal{
+    background: rgba(0, 177, 0, 0.5);
+    width: 2%;
+}
+
+.grafic_redondo{
+    border-radius: 50%;
+    background: rgba(0, 0, 0, 0);
+    border: solid black 1px;
+    height: 20vh;
+    width: 20vh;
+    margin-top: 30px;
+    margin-left: 25%;
+}
+
+.grafic_redondo_interno{
+    position: absolute;
+    border-radius: 50%;
+    background:rgba(67, 255, 67, 0.5);
+    height: 19vh;
+    width: 19vh;
+    margin-left: 0.5vh;
+    margin-top: 0.5vh;
+}
+
+.fixed_grafic{
+    margin-top: 40%;
+    color:black;
+}
+
+.barra_Progress{
+    text-align: center;
+    align-items: center;
+    background-color: rgb(116, 193, 0);
+    color: white;
+    font-size: 18px;
+    width: 90%;
+    margin-left: 5%;
+    height: 40px;
 }
