--- a/global.css
+++ b/global.css
@@ -72,7 +72,7 @@ header button {
     margin-top: 50px;
     width: 60%;
     min-width: 750px;
-    height: 265vh;
+    height: 2700px;
     background: rgba(132, 39, 39, 0.9);
     border-radius: 10px;
 }
