Alteração nas Páginas
Alterada página de relatórios bimestrais: Gráfico que contabiliza o número de ações concluídas não estava funcionando como esperado, adicionei um condicional na estrutura que faz a contagem afim de evitar que capturasse o valor do nível de complexidade da ação quando o usuário não a define, assim quando não difinido o nivel de complexidade, a mesma não entrará para a contagem na geração do gráfico.
Criação de página que gera tabela dos membros que responderam os formulários de bem estar e compromisso.

--- a/pages/forms/formulario.css
+++ b/pages/forms/formulario.css
@@ -16,6 +16,40 @@ button:hover{
     opacity: 0.8;
 }
 
+.tit{
+    margin-top: 40px;
+    text-align: center;
+    font-size: 25px;
+    color: white;
+}
+.tabela{
+    border: solid white 1px;
+    margin: 5px;
+}
+.text-range{
+    display: flex;
+    flex-direction: row;
+}
+.coluna{
+    width: 16.6%;
+    margin-left: -40px;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+li{
+    padding-left: 10px;
+    text-align: center;
+    align-items: center;
+    display: flex;
+    color: white;
+    font-size: 14px;
+    border-bottom: solid white 1px; 
+    border-right: solid white 1px;
+    height: 80px;
+}
+
+
+
 .title{margin-top: 200px;}
 
 .title, .title1{
